@@ -1,4 +1,12 @@
-﻿shmuel 11.11.2016 18:17:36 +0200 - build 593
+﻿shmuel 13.11.2016 17:59:43 +0200 - build 594
+
+1. M#3303: far.Menu: клавиши для BreakKeys
+   LuaFAR: 3-й параметр far.Menu может быть и строкой - перечислением ключей, разделённых пробелами.
+           Однако на семантике возвращаемых значений функции это изменение не сказывается, например
+           при 3-м параметре равном "Ins CtrlF1" и нажатии CtrlF1, первое возвращаемое значение
+           будет сформировано как таблица {BreakKey="CtrlF1"}.
+
+shmuel 11.11.2016 18:17:36 +0200 - build 593
 
 1. LuaFAR: editor.DeleteSessionBookmark(EditorId,position) - make parameter 'position' 1-based.
 
